# GeneWalk-Analysis-Pipeline

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  build_desktop.py  comparison_app.py  desktop.py  desktop_launcher.py  file_map.md  generate_sample_data.py  pyproject.toml  requirements-desktop.txt  requirements.txt  review_code_audit.md  review_packaging.md  splicing_app.py
.github/workflows/: build-desktop.yml  test.yml
.streamlit/: config.toml
genewalk_app/: _gw_wrapper.py  comparison.py  comparison_viz.py  dashboard.py  deg_visualizations.py  gene_investigator.py  gsea_runner.py  runner.py  splicing.py  splicing_viz.py  styles.py  visualizations.py
sample_data/: sample_deg_table.csv  sample_genes.txt  sample_genewalk_results.csv
tests/: conftest.py  test_dashboard.py  test_runner.py  test_visualizations.py
